--- a/webapp.yaml
+++ b/webapp.yaml
@@ -15,9 +15,13 @@ spec:
     spec:
       containers:
       - name: webapp 
-        image: acrromm.azurecr.io/webapp:1.0 
+        image: acrromm.azurecr.io/webapp:1.1 
         ports:
         - containerPort: 5000
+        envFrom:
+        - secretRef:
+            name: secretpass
+
 ---
 apiVersion: v1
 kind: Service
